# cnc-brain

./: .gitignore  Cargo.toml  README.md  SETUP.md  build.rs  cnc_brain-0037018.mm_profdata  mem.txt  memory.x  package.json
.cargo/: config.toml
.devcontainer/: devcontainer.json
grbl-compat/: Cargo.toml
grbl-compat/src/: gcode_parser.rs  grbl_state.rs  lib.rs
serialport/: Cargo.toml
serialport/src/: lib.rs
simulation/: index.html  sketch.js
src/: gcode_parser.rs  jog_wheel.rs  lib.rs  machine_state.rs  main.rs  motion.rs  prelude.rs  prog.pio  receiver.rs  runner.rs  stepper.rs  zzzlib.rs
src/hardware/: mod.rs  servo.rs  stepper.rs
src/systems/: mill_system.rs  mod.rs  motion_system.rs
