[package]
name = "cnc-brain"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-sync = { version = "0.6.2" }
embassy-executor = { version = "0.7.0", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    # "task-arena-size-131072", # 128k
    "nightly",
] }
embassy-time = { version = "0.4.0", features = [] }
embassy-rp = { version = "0.3.1", features = [
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
    "rp2040",
] }
embassy-usb-logger = { version = "0.4.0" }

fixed = "1.23.1"
fixed-macro = "1.2"

cortex-m-rt = "0.7.0"

# embedded-storage = { version = "0.3" }
static_cell = "2.1"
log = "0.4"
pio-proc = "0.2"
pio = "0.2"
assign-resources = "0.4.1"
libm = "0.2.11"
embedded-alloc = "0.6.0"
portable-atomic = { version = "1.5", features = ["critical-section"] }

[profile.dev]
opt-level = 3
