[package]
name = "cnc-brain"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-sync = { version = "0.6.2" }
embassy-executor = { version = "0.7.0", features = [
    "arch-cortex-m",
    "executor-interrupt",
    "executor-thread",
    "nightly",
] }
embassy-rp = { version = "0.4.0", features = [
    "critical-section-impl",
    "rp2040",
    "time-driver",
    "unstable-pac",
] }
embassy-usb-logger = { version = "0.4.0" }

fixed = "1.29.0"

cortex-m-rt = "0.7.0"

# embedded-storage = { version = "0.3" }
static_cell = "2.1"
log = "0.4.26"
pio = "0.3.0"
assign-resources = "0.4.1"
libm = "0.2.11"
portable-atomic = { version = "1.11.0", features = ["critical-section"] }
embassy-time = "0.4.0"
embassy-futures = "0.1.1"

[profile.dev]
opt-level = 3
